--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 WhatsOnZwift\.xcworkspace/xcuserdata/jfdufour\.xcuserdatad/xcdebugger/Breakpoints_v2\.xcbkptlist
 WhatsOnZwift\.xcworkspace/xcuserdata/jfdufour\.xcuserdatad/UserInterfaceState\.xcuserstate
 Pods
+WhatsOnZwift.xcodeproj/project.xcworkspace/xcuserdata/jfdufour.xcuserdatad/UserInterfaceState.xcuserstate
+WhatsOnZwift.xcodeproj/xcuserdata/jfdufour.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
